--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jul 11 08:35:04 IST 2022
-sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
+#Sun Jul 24 15:43:45 IST 2022
+sdk.dir=C\:\\Users\\Hp\\AppData\\Local\\Android\\Sdk
